<?xml version="1.0" encoding="utf-8"?>
<!--네비게이션에 사용할 메뉴-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--menu의 ID와 nav_graph에서의 ID가 같아야 한다-->
    <item android:id="@+id/fragment_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        />

    <item android:id="@+id/fragment_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        />

    <item android:id="@+id/fragment_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting"
        />
</menu>